--- a/public/index.html
+++ b/public/index.html
@@ -5,31 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
+    <link rel="icon" href="./img/favicon.png" />
+    <link rel="stylesheet" href="./css/styles.min.css" />
   </head>
   <body>
-    Chat App
-
-    <div id="messages"></div>
-    <form id="message-form">
-      <input
-        name="message"
-        placeholder="Message"
-        class="inputMessage"
-        type="text"
-      />
-      <button class="sendBTN">Send</button>
-    </form>
-    <button id="send-location">Send location</button>
+    <div class="chat">
+      <div class="chat__sidebar"></div>
+      <div class="chat__main">
+        <div id="messages" class="chat__messages"></div>
+        <div class="compose">
+          <form id="message-form">
+            <input
+              name="message"
+              placeholder="Message"
+              class="inputMessage"
+              type="text"
+            />
+            <button class="sendBTN">Send</button>
+          </form>
+          <button id="send-location">Send location</button>
+        </div>
+      </div>
+    </div>
 
     <script id="message-template" type="text/html">
       <div>
-        <p>{{message}}</p>
+        <p>{{createdAt}} - {{message}}</p>
       </div>
     </script>
 
     <script id="location-template" type="text/html">
       <div>
-        <a href="{{location}}" target="_blank">My current location</a>
+        <p>
+          {{createdAt}} -
+          <a href="{{location}}" target="_blank"> My current location</a>
+        </p>
       </div>
     </script>
 
