--- a/public/chat.html
+++ b/public/chat.html
@@ -43,15 +43,17 @@
         <p><a href="{{ url }}" target="_blank">My Current location</a></p>
       </div>
     </script>
+
     <script id="sidebar-template" type="text/html">
-      <h2 class="room-title">Room name: {{room}}</h2>
-      <h3 class="list-title">Users:</h3>
-      <ul class="user">
+      <h2 class="room-title">{{room}}</h2>
+      <h3 class="list-title">Users</h3>
+      <ul class="users">
         {{#users}}
         <li>{{username}}</li>
         {{/users}}
       </ul>
     </script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
