--- a/public/chat.html
+++ b/public/chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Guff app</title>
+    <title>Chat app</title>
     <link rel="icon" href="./img/favicon.png" />
     <link rel="stylesheet" href="./css/styles.min.css" />
   </head>
